Dice game created

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
     <div class="game_bar">
       <h1>CASINO GAME$</h1>
-      <button class="games_button"><a href="/dicee.html">Dice Game</a></button>
-      <button class="games_button"><a href="/dicee.html">Dice Game</a></button>
-      <button class="games_button"><a href="/dicee.html">Dice Game</a></button>
+      <button class="games_button"><a href="dicee.html">Dice Game</a></button>
+      <button class="games_button"><a href="dicee.html">Dice Game</a></button>
+      <button class="games_button"><a href="dicee.html">Dice Game</a></button>
     </div>
   </body>
 </html>
