--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body style="background: url(images/panic.jpg) center">
     <!-- Games bar -->
 
     <div class="game_bar">
